# github-trending-cli

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  analyzer.py  github_trending.py  pyproject.toml  test_github_trending.py
.github/workflows/: ci.yml
