[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-trending-cli"
version = "1.0.2"
description = "A powerful CLI tool for discovering and evaluating GitHub trending repositories, designed for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "GitHub Trending CLI Contributors"}
]
keywords = [
    "github",
    "trending",
    "cli",
    "repositories",
    "developer-tools",
    "automation",
    "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/baba20o/github-trending-cli"
Repository = "https://github.com/baba20o/github-trending-cli"
Issues = "https://github.com/baba20o/github-trending-cli/issues"

[project.scripts]
github-trending = "github_trending:main"
gt = "github_trending:main"

[tool.setuptools]
py-modules = ["github_trending", "analyzer"]
